# muscles-cli

./: pyproject.toml
docs/: cli.md
src/muscles/cli/: __about__.py  __init__.py
src/muscles/cli/cli/: __init__.py  cli.py  command.py  error_handler.py  func.py  instance.py  strategy.py
tests/cli/: test_cli.py
